css/app.css
element.style {
    height: 935px;
    z-index: 100;
}
.off-canvas-content {
    overflow: hidden;
}

     
body {
    background: #36c3e5;
    background: #FF4136;
}
.callout {
    background: #36c3e5;
    background: #FF4136;
    padding: 10px;
    color: white;
    text-align: right;
    border: none;
    margin-top: 0px;
}
.x-callout:before {
    display: none;
}


.leslieTitle {
    font-family: 'Pacifico', cursive; 
    line-height: auto;
    margin-bottom: auto;
    /*     font-weight: bold; */
    
    font-size: 150px;
} 

.mosesTitle {
font-family:'Monofett', cursive; 
font-size:210px;
}

.callout H4 {
    font-family: 'Lobster', cursive;
    font-family: 'Syncopate', sans-serif;
    font-family: 'Open Sans Condensed', sans-serif;
    letter-spacing: .05em;
    line-height: 3px;
    font-size: 40px;
}
#feelSpectrumText {
    letter-spacing: 1em;
    line-height: 2px;
    margin-bottom: 6px;
    text-align: left;
}
/**{
        background: #ff7bac;
    }*/

    /* START  SWAP responsive icons --> */
 
.social-links {
  background: #FF4136;
  padding: 2rem 0 1rem;
}

.social-links a {
  color: white;
  font-size: 2.2rem;
      font-family: 'Open Sans Condensed', sans-serif;      
  background: #FF4136;
}

.social-links i.fa {
  font-size: 5rem;
  padding-right: 0.8rem;
  padding-bottom: 1rem;
}

.social-links i.fa:hover {
    color: grey;
}

@media screen and (max-width: 39.9375em) {
  .social-links {
    padding: 2rem 0;
  }
  .social-links i.fa {
    font-size: 2rem;
    display: block;
    padding-right: 0;
    padding-bottom: 0.5rem;
  }
  .social-links a {
    font-weight: bold;
  }
  .social-links .columns {
    margin: 1rem 0;
  }
  .social-links .mobile-stack {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
  }
}

   
    /* END SWAP responsive icons */

#talkInvite {
    font-size: 40px;
    font-family: 'Comfortaa', cursive;
    line-height: 3px;
    color: #FF4136;
    margin-bottom: 2px;
    margin-top: 20px;
    background: white;
    border-radius: 40%;
}
#selfieInvite {
    font-size: 60px;
    font-family: 'Comfortaa', cursive;
    line-height: 3px;
    color: #FF4136;
    margin-bottom: 2px;
    margin-top: 20px;
    background: white;
    border-radius: 40%;
    text-align: right;
}

#smCameraButton {
    margin-left: 5px;
    margin-top: -10px;
}

.rezTitle{
    font-family:'Monofett', cursive; 
    font-size:100px; text-align:left; 
    color:white;
}

.devHed{
    font-family: 'Pacifico', cursive;
    font-size:70px;
}

.designHed{
    font-family:'Monofett', cursive; 
    font-size:100px; 
    text-align:right;
}
#sayText {
    font-size: 20px;
    color: #666;
}
#pencilColor {
    font-size: 350px;
    float: right;
    width: 40%;
    height: 40%;
    margin-right: 50px;
    padding: 0px;
    color: white;
}


#pencilColor:hover {
    color: navajowhite;
}
#getYourTextColor {
    /* @extend .transition*/
    margin-top: 20px;
    background-color: #FF4136;
    border: 1px solid #FF4136;
    line-height: 0;
    display: inline-block;
    box-sizing: border-box;
    padding: 20px 15px;
    /*      border-radius: 60px;*/
    color: white;
/*     letter-spacing: 0.01em; */
    position: relative;
    top: 20px;
    z-index: 1;
    font-size: 20px;
    font-weight: bold;
    font-family: 'Comfortaa', cursive;
}
#getYourTextColor:hover {
    color: white;
    background-color: salmon;
    border: 2px solid white;
}
#getYourTextColor:hover #pencilColor {
    color: lightgreen;
}
.box {
    float: right;
    width: 35px;
    height: 35px;
    margin: 10px;
    border: 7px solid white;
    align-items: right;
    border-radius: 15%;
}
.box:hover {
    border-radius: 40%;
    box-shadow: 1px 1px white, 2px 2px white, 3px 3px white;
    -webkit-transform: translateX(-3px);
    transform: translateX(-3px);
}
#cameraFeel {
    float: right;
    width: 40%;
    height: 40%;
    margin-right: 10px;
    padding: 0px;
    border-style: none;
    color: white;
    font-size: 110px;
    /*     max-width: 400px;
min-width: 100px;
height: 400px;
min-height: 100px; */
}
#cameraFeel:hover {
    color: grey;
    /*     max-width: 400px;
min-width: 100px;
height: 400px;
min-height: 100px; */
}
#smCamera {
    color: black;
    text-align: right;
}
#smCamera:hover {
    color: floralwhite;
    text-align: right;
}


#pencilFeel {
    float: right;
    width: 40%;
    /* height: 40%; */
    margin-right: 50px;
    padding: 0px;
    color: white;
    font-size: 110px;

}
#pencilFeel:hover {
    color: grey;
    /*     max-width: 400px;
min-width: 100px;
height: 400px;
min-height: 100px; */
}
#textCamera {
    font-size: 55px;
    color: white;
    font-weight: bolder;
    padding-left: none;
    text-align: right;
    font-family: 'Open Sans Condensed', sans-serif;
    /* margin-top: 20px; */
}
#textPencil {
    font-size: 55px;
    color: white;
    font-weight: bolder;
    padding-left: none;
    text-align: center;
    font-family: 'Open Sans Condensed', sans-serif;
    /* margin-top: 20px; */
}

.feel {
    color: white;
    font-size: 18px;
}
/* START CARO Pics */

.image-hover-wrapper {
    position: relative;
    background: white;
    /* padding: 10%; */
    margin-bottom: 2%;
    border-radius: 1%;
    padding: 20px;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 24px;
}

.image-hover-wrapper a {
  display: inline-block;
  letter-spacing: normal;
  line-height: initial;
  margin: 0;
  padding: 0;
  position: relative;
}

.image-hover-wrapper a img {
  float: left;
  overflow: hidden;
  width: 100%;
}

.image-hover-wrapper a .image-hover-wrapper-reveal {
  background-color: rgba(1, 2, 3, .7);
  color: #fefefe;
  display: inline;
  height: 100%;
  margin-left: -100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 80;
  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
  transition-delay: 0.25s;
}
/* ... */

